--- a/src/containers/Search/Footer.css
+++ b/src/containers/Search/Footer.css
@@ -35,7 +35,7 @@
 }
 
 .kgs-footer.is-fixed-position .kgs-footer-nav {
-    padding: 14px 20px;
+    padding: 1px var(--site-margin);
     background-color: var(--background-color-1);
 }
 
@@ -65,11 +65,6 @@
 .kgs-footer-nav button.kgs-sign-in {
     display: none;
 }
-
-.kgs-footer.is-fixed-position .kgs-footer-nav {
-    padding: 14px var(--site-margin);
-}
-
 
 .kgs-footer .kgs-footer-nav .kgs-share-links .kgs-share-links-panel:before {
    background-color: var(--background-color-1);
